fix: update table border styles in general.scss to use solid black borders for improved visibility and ensure newline at end of styles.min.css for consistency

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -1039,13 +1039,14 @@ body.logged-in {
 }
 
 table.table-border {
-	border: 1px solid $medium-gray-color;
+	border: 1px solid #000;
 	border-collapse: collapse;
 
 	td, th {
-		border: 1px solid $medium-gray-color;
+		border: 1px solid #000;
 		vertical-align: middle;
 		text-align: center;
+		word-break: break-word;
 	}
 }
 
